--- a/co-write/build.gradle
+++ b/co-write/build.gradle
@@ -24,6 +24,9 @@ allprojects {
 	}
 
 	dependencies {
+
+		implementation 'ch.qos.logback:logback-classic'
+
 		compileOnly 'org.projectlombok:lombok'
 		annotationProcessor 'org.projectlombok:lombok'
 
