--- a/co-write/core/reading-document/build.gradle
+++ b/co-write/core/reading-document/build.gradle
@@ -4,4 +4,5 @@ dependencies {
     implementation 'org.springframework.kafka:spring-kafka'
     implementation "org.springframework.boot:spring-boot-starter-websocket"
     implementation project(':global:event')
+    implementation project(':global:outbox-message-relay')
 }
