--- a/co-write/global/event/build.gradle
+++ b/co-write/global/event/build.gradle
@@ -1,3 +1,4 @@
 dependencies {
     implementation project(':global:data-serializer')
+    implementation 'org.springframework.boot:spring-boot-starter-json'
 }
