chore(build.gradle): reading document 모듈에 data-serializer 추가

--- a/co-write/core/reading-document/build.gradle
+++ b/co-write/core/reading-document/build.gradle
@@ -5,4 +5,5 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-websocket"
     implementation project(':global:event')
     implementation project(':global:outbox-message-relay')
+    implementation project(':global:data-serializer')
 }
