--- a/co-write/core/user-and-document/build.gradle
+++ b/co-write/core/user-and-document/build.gradle
@@ -9,9 +9,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+    implementation 'org.springframework.kafka:spring-kafka'
     implementation("io.jsonwebtoken:jjwt-api:0.12.7")
     runtimeOnly("io.jsonwebtoken:jjwt-impl:0.12.7")
     runtimeOnly("io.jsonwebtoken:jjwt-jackson:0.12.7")
     runtimeOnly 'com.mysql:mysql-connector-j'
     implementation project(':global:snowflake')
+    implementation project(':global:event')
 }
