refactor(event): update 이벤트 한 번에 save이벤트 한번 발행 시킨 후, save 이벤트가 10번 발행되면 db에 저장하는 로직을  update 이벤트가 10번 실행 되면 save 이벤트 발행시키고 save 이벤트가 발행되면 바로 db에 저장하도록 변경

--- a/co-write/core/reading-document/src/main/resources/application.yml
+++ b/co-write/core/reading-document/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/article
+    url: jdbc:mysql://localhost:3306/document
     username: root
     password: Abcd123@
 
@@ -15,3 +15,16 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: none
+
+  data:
+    redis:
+      host: 127.0.0.1
+      port: 6379
+
+  kafka:
+    bootstrap-servers: 127.0.0.1:9092
+    consumer:
+      group-id: reading-document-service
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      enable-auto-commit: false
