refactor: 모듈 이름 reading-document -> edit-document로 변경

--- a/co-write/settings.gradle
+++ b/co-write/settings.gradle
@@ -8,5 +8,5 @@ include 'global:outbox-message-relay'
 
 include 'core'
 include 'core:user-and-document'
-include 'core:reading-document'
+include 'core:edit-document'
 
