--- a/co-write/settings.gradle
+++ b/co-write/settings.gradle
@@ -9,4 +9,5 @@ include 'global:outbox-message-relay'
 include 'core'
 include 'core:user-and-document'
 include 'core:edit-document'
+include 'core:read-document'
 
